--- a/Style.css
+++ b/Style.css
@@ -25,6 +25,31 @@ li {
 a {
   color: #6b708d;
   text-decoration: none;
+  background-color: transparent;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
+}
+
+h1 {
+  margin-top: 20px;
+}
+
+img {
+  max-width: 100%;
+  vertical-align: middle;
+  display: inline-block;
+  border: 0;
+}
+
+div {
+  display: block;
 }
 
 .navbar {
@@ -74,9 +99,6 @@ a {
   transition: 0.7s ease;
   color: #f2f4fc;
   font-weight: 500;
-}
-
-.button-primary {
   padding: 15px 30px;
   background-color: #072ac8;
 }
@@ -99,20 +121,6 @@ a {
   background-color: #6b708d;
 }
 
-@media (max-width: 991px) {
-  .hamburger {
-    display: block;
-  }
-  .hamburger.active.bar:nth-child(2) {
-    opacity: 0;
-  }
-  .hamburger.active.bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-  }
-  .hamburger.active.bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-  }
-}
 .hamburger.active {
   background-color: #c8c8c8;
 }
@@ -148,4 +156,317 @@ a {
   font-size: 17px;
   align-items: flex-start;
   font-weight: 500;
+}
+
+/* HERO SECTION STYLING*/
+
+.section {
+  margin-top: 0px;
+  padding: 0 30px;
+}
+
+.section.hero {
+  padding-top: 100px;
+}
+
+.container {
+  max-width: 1100px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.container.hero-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-content {
+  max-width: 530px;
+}
+
+.heading-2 {
+  color: #292e47;
+  line-height: 130%;
+}
+
+.hero-heading {
+  margin-bottom: 30px;
+}
+
+.text-block {
+  max-width: 435px;
+  margin-bottom: 0px;
+  color: #6b708d;
+  line-height: 150%;
+  font-size: 20px;
+}
+
+.text-block.hero-description {
+  margin-bottom: 40px;
+}
+
+.hero-buttons {
+  display: block;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.hero-text-button {
+  color: #6b708d;
+  font-size: 17px;
+  font-weight: 500;
+  text-decoration: none;
+  align-self: center;
+  margin: 15px 40px 0px 20px;
+}
+
+.button.hero {
+  margin-right: 40px;
+  margin-left: 20px;
+}
+
+.button {
+  padding: 15px 30px;
+  background-color: #072ac8;
+  font-size: 17;
+}
+
+.w-button {
+  display: inline-block;
+  color: white;
+  border: 0;
+  line-height: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 0;
+}
+
+.hero-image {
+  position: relative;
+}
+
+.hero-main-card {
+  width: 560px;
+  max-width: 76vw;
+}
+
+.hero-card-1 {
+  position: absolute;
+  left: -19%;
+  top: 0%;
+  right: auto;
+  bottom: auto;
+  width: 294px;
+  max-width: 375px;
+}
+
+.hero-card-2 {
+  position: absolute;
+  left: auto;
+  top: auto;
+  right: -25%;
+  bottom: -22%;
+  width: 290px;
+  max-width: 375px;
+}
+
+/* LOGO SECTION */
+
+.container.logos {
+  margin-top: 130px;
+}
+.grid-logos {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+}
+
+.client-logo {
+  display: flex;
+  width: 150px;
+  height: 96px;
+  max-height: 96px;
+  max-width: 150px;
+  justify-content: center;
+  align-items: center;
+}
+
+/* PROJECTS SECTION */
+
+.section.projects {
+  margin-top: 200px;
+}
+
+.container.projects-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.projects-heading {
+  color: #292e47;
+  font-size: 40px;
+}
+
+.collection-list-wrapper {
+  margin-top: 70px;
+}
+
+.collection-list {
+  display: grid;
+  grid-auto-flow: row;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 40px;
+  grid-row-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto;
+}
+
+.project-card {
+  display: flex;
+  width: 340px;
+  height: 444px;
+  max-height: 444px;
+  max-width: 340px;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex: 1;
+}
+
+.project-card-image {
+  width: 100%;
+  height: 240px;
+  object-fit: cover;
+}
+
+.project-content {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+}
+
+.project-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.project-title {
+  margin: 30px 30px 20px;
+  color: #292e47;
+  font-size: 24px;
+  line-height: 115%;
+  font-weight: 500;
+}
+
+.project-title.project-description {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-size: 17px;
+  font-weight: 400;
+}
+
+.project-link {
+  margin: 30px;
+  color: #072ac8;
+  font-size: 17px;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+@media (max-width: 991px) {
+  .hamburger {
+    display: block;
+  }
+  .hamburger.active.bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.active.bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active.bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+}
+
+@media (max-width: 991px) {
+  .section.hero {
+    padding-top: 0px;
+  }
+  .container.hero-container {
+    flex-direction: column;
+  }
+  .hero-content {
+    display: flex;
+    max-width: 700px;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+  }
+
+  .hero-heading {
+    margin-bottom: 30px;
+  }
+
+  .heading-2.hero-heading {
+    text-align: center;
+  }
+
+  .text-block.hero-description {
+    max-width: 600px;
+    text-align: center;
+  }
+
+  .hero-buttons {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .button.hero {
+    display: block;
+    margin-right: 40px;
+    margin-left: 20px;
+  }
+  .hero-image {
+    margin-top: 40px;
+  }
+  .hero-card-1 {
+    width: 60%;
+  }
+  .hero-card-2 {
+    width: 60%;
+  }
+
+  /* LOGO SECTION */
+
+  .grid-logos {
+    justify-items: center;
+    align-items: center;
+    grid-column-gap: 50px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  /* PROJECTS SECTION */
+
+  .section.projects {
+    margin-top: 40px;
+  }
+
+  .collection-list {
+    max-width: 100%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  .project-card {
+    max-width: 100%;
+  }
 }
