--- a/Style.css
+++ b/Style.css
@@ -28,6 +28,10 @@ a {
   background-color: transparent;
 }
 
+a:-webkit-any-link {
+  cursor: pointer;
+}
+
 h1,
 h2,
 h3,
@@ -38,6 +42,8 @@ h6 {
 }
 
 h1 {
+  font-size: 38px;
+  line-height: 44px;
   margin-top: 20px;
 }
 
@@ -52,8 +58,18 @@ div {
   display: block;
 }
 
-.navbar {
+form {
+  display: block;
+  margin-top: 0em;
+}
+
+input {
+  line-height: normal;
+}
+
+.navbar.container {
   margin: auto;
+  margin-top: 70px;
   min-height: 70px;
   display: flex;
   justify-content: space-between;
@@ -80,15 +96,12 @@ div {
 .nav-link {
   transition: 0.7s ease;
   font-weight: 500;
+  font-size: 17px;
 }
 
 .nav-link:hover {
   color: #1c2fa9;
 }
-
-/* .nav-link.current {
-  color: #0082f3;
-} */
 
 .button-primary {
   position: relative;
@@ -125,38 +138,9 @@ div {
   background-color: #c8c8c8;
 }
 
-/* .bar.active {
+/* .hamburger.bar.active {
   background-color: white;
 } */
-
-.menu-button {
-  display: none;
-}
-
-.nav-menu {
-  position: fixed;
-  left: -100%;
-  top: 70px;
-  gap: 0;
-  flex-direction: column;
-  background-color: #c8c8c8;
-  width: 100%;
-  text-align: center;
-  transition: 0.3s;
-}
-
-.nav-item {
-  margin: 16px 0;
-  font-weight: bold;
-}
-
-.nav-menu.active {
-  left: 0;
-  padding: 20px;
-  font-size: 17px;
-  align-items: flex-start;
-  font-weight: 500;
-}
 
 /* HERO SECTION STYLING*/
 
@@ -187,10 +171,11 @@ div {
 
 .heading-2 {
   color: #292e47;
+  font-size: 60px;
   line-height: 130%;
 }
 
-.hero-heading {
+.heading-2.hero-heading {
   margin-bottom: 30px;
 }
 
@@ -247,8 +232,8 @@ div {
 }
 
 .hero-main-card {
-  width: 560px;
-  max-width: 76vw;
+  width: 500px;
+  max-width: 560px;
 }
 
 .hero-card-1 {
@@ -258,7 +243,7 @@ div {
   right: auto;
   bottom: auto;
   width: 294px;
-  max-width: 375px;
+  max-width: 294px;
 }
 
 .hero-card-2 {
@@ -268,7 +253,7 @@ div {
   right: -25%;
   bottom: -22%;
   width: 290px;
-  max-width: 375px;
+  max-width: 290px;
 }
 
 /* LOGO SECTION */
@@ -380,7 +365,342 @@ div {
   text-decoration: none;
 }
 
+/*SECTION TESTIMONIAL*/
+
+.section.testimonial {
+  position: relative;
+  height: 622px;
+  margin-top: 200px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #292e47;
+  background-image: url(./project-assets/testimonial-section/orbit.png);
+  background-position: 0px 0px;
+  background-size: contain;
+  color: #292e47;
+}
+
+.testimonial {
+  max-width: 1320px;
+  color: #292e47;
+}
+
+.container.testimonial {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.testimonial-heading {
+  color: #ecf7ff;
+  font-size: 40px;
+  text-align: center;
+}
+
+.testimonial-text {
+  max-width: 560px;
+  margin-right: auto;
+  margin-left: auto;
+  color: #ffc600;
+  font-size: 24px;
+  line-height: 160%;
+  font-weight: 500;
+  text-align: center;
+}
+
+.client {
+  display: flex;
+  align-items: center;
+}
+
+.client-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-image: url(./project-assets/testimonial-section/profile.png);
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.client-info {
+  display: flex;
+  margin-left: 10px;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.client-name {
+  color: #a2d6f9;
+  font-size: 17px;
+}
+
+.client-position {
+  color: #ecf7ff;
+  font-size: 13px;
+}
+
+.emoji {
+  position: static;
+  width: 150px;
+  height: 150px;
+}
+
+.emoji.top-left {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: auto;
+  bottom: auto;
+  margin-top: 5%;
+  margin-left: 10%;
+  background-image: url(./project-assets/testimonial-section/memoji-1.png);
+  background-position: 50% 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.emoji.top-right {
+  position: absolute;
+  left: auto;
+  top: 0%;
+  right: 0%;
+  bottom: auto;
+  margin-top: 5%;
+  margin-right: 10%;
+  background-image: url(./project-assets/testimonial-section/memoji-4.png);
+  background-position: 50% 50%;
+  background-size: contain;
+}
+
+.emoji.bottom-left {
+  position: absolute;
+  left: 0%;
+  top: auto;
+  right: auto;
+  bottom: 0%;
+  margin-bottom: 5%;
+  margin-left: 10%;
+  padding-left: 0%;
+  background-image: url(./project-assets/testimonial-section/memoji-3.png);
+  background-position: 50% 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.emoji.bottom-right {
+  position: absolute;
+  left: auto;
+  top: auto;
+  right: 0%;
+  bottom: 0%;
+  margin-right: 10%;
+  margin-bottom: 5%;
+  background-image: url(./project-assets/testimonial-section/memoji-2.png);
+  background-position: 50% 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+/* SECTION SERVICES*/
+
+.section.services {
+  margin-top: 200px;
+}
+
+.services-grid {
+  display: grid;
+  margin-top: 70px;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 40px;
+  grid-row-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+}
+
+.service-card {
+  display: flex;
+  max-width: 340px;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+}
+
+.service-icon {
+  width: 80px;
+  height: 80px;
+  margin-top: 40px;
+  margin-left: 40px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  border-radius: 50%;
+  background-color: #ecf7ff;
+  background-image: url(./project-assets/services-section/icons/1.svg);
+  background-position: 50% 50%;
+  background-size: auto;
+  background-repeat: no-repeat;
+}
+
+.service-icon.icon-2 {
+  background-image: url(./project-assets/services-section/icons/2.svg);
+}
+
+.service-icon.icon-3 {
+  background-image: url(./project-assets/services-section/icons/3.svg);
+}
+
+.service-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* FORMULARIO*/
+
+.section.cta-section {
+  width: 1320px;
+  height: 500px;
+  max-width: 1320px;
+  margin-top: 200px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #ffc600;
+}
+
+.container.container-cta {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.cta-heading {
+  margin-bottom: 20px;
+  color: #292e47;
+  font-size: 40px;
+}
+
+.cta-subtitle {
+  font-size: 17px;
+}
+.form-block {
+  display: flex;
+  margin-top: 50px;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.w-form {
+  margin: 0 0 15px;
+}
+
+.cta-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cta-textfield-wrapper {
+  position: relative;
+}
+
+/*FORM-BUTTONS*/
+
+.text-field {
+  width: 393px;
+  height: 80px;
+  margin-bottom: 0px;
+  padding-left: 70px;
+  background-color: #ecf7ff;
+  color: #292e47;
+}
+
+.w-input {
+  display: block;
+  width: 100%;
+  height: 38px;
+  padding: 8px 12px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333333;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+}
+
+.textfield-icon {
+  position: absolute;
+  left: 8%;
+  top: 27%;
+  right: auto;
+  bottom: auto;
+  width: 30px;
+  height: 30px;
+  background-image: url(./project-assets/newsletter/icon/mail.svg);
+  background-position: 50% 50%;
+  background-size: auto;
+  background-repeat: no-repeat;
+}
+
+.button.primary-button.cta-button {
+  height: 80px;
+  margin-left: 20px;
+  padding-right: 60px;
+  padding-left: 60px;
+}
+
+/*FOOTER*/
+
+.section.footer {
+  margin-top: 200px;
+  padding-bottom: 100px;
+}
+
+.container.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+.footer-content {
+  display: flex;
+  width: 260px;
+  max-width: 260px;
+  flex-direction: column;
+}
+.footer-content-logo {
+  width: 100px;
+  height: 30px;
+  margin-bottom: 30px;
+  background-image: url(./project-assets/logos/circle.svg);
+  background-position: 50% 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.footer-content-address {
+  font-size: 17px;
+  line-height: 150%;
+}
+.footer-links {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+}
+.footer-link {
+  font-size: 17px;
+  text-decoration: none;
+}
+
 @media (max-width: 991px) {
+  .menu-button {
+    display: none;
+  }
   .hamburger {
     display: block;
   }
@@ -392,6 +712,126 @@ div {
   }
   .hamburger.active.bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
+  }
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 140px;
+    gap: 0;
+    flex-direction: column;
+    background-color: #c8c8c8;
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+  }
+  .nav-item {
+    margin: 16px 0;
+    font-weight: bold;
+  }
+  .nav-menu.active {
+    left: 0;
+    padding: 20px;
+    font-size: 17px;
+    align-items: flex-start;
+    font-weight: 500;
+  }
+}
+@media screen and (max-width: 767px) {
+  .heading-2.hero-heading {
+    font-size: 30px;
+  }
+  .text-block.hero-description {
+    font-size: 17px;
+  }
+
+  .emoji.bottom-right {
+    display: none;
+  }
+  .emoji.bottom-left {
+    display: none;
+  }
+  .emoji.top-right {
+    display: none;
+  }
+  .emoji.top-left {
+    display: none;
+  }
+  .projects-heading {
+    text-align: center;
+    font-size: 30px;
+  }
+  .services-grid {
+    margin-top: 20px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+  }
+  .service-card {
+    max-width: 100%;
+  }
+  .service-icon.icon-1 {
+    flex: 0 0 auto;
+  }
+  .service-icon.icon-2 {
+    flex: 0 0 auto;
+  }
+  .service-icon.icon-3 {
+    flex: 0 0 auto;
+  }
+
+  /*FORM*/
+
+  .container.container-cta {
+    max-width: 100%;
+  }
+
+  .cta-heading {
+    font-size: 30px;
+  }
+
+  .text-field {
+    width: 100%;
+  }
+
+  .button.primary-button.cta-button {
+    width: 100%;
+    max-width: 100%;
+    margin-top: 20px;
+    margin-left: 0px;
+  }
+
+  .form-block {
+    flex-direction: column;
+  }
+
+  .cta-form {
+    flex-direction: column;
+  }
+
+  .button.primary-button.cta-button {
+    width: 100%;
+    max-width: 100%;
+    margin-top: 20px;
+    margin-left: 0px;
+  }
+
+  /*FOOTER*/
+
+  .emoji .container.footer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer-content {
+    align-items: center;
+  }
+  .footer-links {
+    margin-top: 20px;
+  }
+  .footer-content-address {
+    text-align: center;
+  }
+  .container.footer {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -409,25 +849,19 @@ div {
     align-items: center;
     align-self: center;
   }
-
   .hero-heading {
     margin-bottom: 30px;
   }
-
   .heading-2.hero-heading {
     text-align: center;
   }
-
   .text-block.hero-description {
     max-width: 600px;
     text-align: center;
   }
-
   .hero-buttons {
     display: flex;
     flex-direction: column-reverse;
-    justify-content: flex-start;
-    align-items: center;
   }
   .button.hero {
     display: block;
@@ -437,14 +871,20 @@ div {
   .hero-image {
     margin-top: 40px;
   }
+  .hero-main-card {
+    width: 100%;
+    max-width: 560px;
+  }
   .hero-card-1 {
-    width: 60%;
+    display: none;
+    width: 270px;
   }
   .hero-card-2 {
-    width: 60%;
+    display: none;
+    width: 270px;
   }
 
-  /* LOGO SECTION */
+  /*logos section*/
 
   .grid-logos {
     justify-items: center;
@@ -454,19 +894,80 @@ div {
     grid-template-rows: auto auto;
   }
 
-  /* PROJECTS SECTION */
-
   .section.projects {
     margin-top: 40px;
   }
-
   .collection-list {
     max-width: 100%;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: auto auto;
   }
-
   .project-card {
+    width: 100%;
     max-width: 100%;
+  }
+  /* width: 270px;
+  } */
+
+  .section.testimonial {
+    height: 500px;
+    margin-top: 60px;
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .testimonial-heading {
+    max-width: 400px;
+    margin-bottom: 0px;
+    line-height: 150%;
+  }
+  .emoji.top-left {
+    width: 100px;
+    height: 100px;
+  }
+  .emoji.top-right {
+    width: 100px;
+    height: 100px;
+  }
+  .emoji.bottom-left {
+    width: 100px;
+    height: 100px;
+  }
+  .emoji.bottom-right {
+    width: 100px;
+    height: 100px;
+  }
+
+  /*SECTION SERVICES*/
+
+  .section.services {
+    margin-top: 40px;
+  }
+
+  .section.cta-section {
+    display: flex;
+    max-width: 100%;
+    margin-top: 60px;
+    flex-direction: row;
+  }
+  .emoji.top-ri .section.cta-section {
+    display: flex;
+    max-width: 100%;
+    margin-top: 60px;
+    flex-direction: row;
+  }
+  .emoji.bo .section.footer {
+    margin-top: 60px;
+  }
+
+  /*FORM*/
+
+  /*FOOTER*/
+
+  .button.primary-button.cta-button {
+    display: block;
+  }
+  .section.footer {
+    margin-top: 60px;
   }
 }
