--- a/Contact.css
+++ b/Contact.css
@@ -46,6 +46,30 @@ div {
   display: block;
 }
 
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  cursor: default;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: inherit;
+  font: inherit;
+  margin: 0;
+}
+input {
+  line-height: normal;
+}
+form {
+  display: block;
+  margin-top: 0em;
+}
+
 /*navbar*/
 
 .navbar.container {
@@ -218,19 +242,7 @@ input.w-button {
   font-size: 20px;
   font-weight: 400;
 }
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-  cursor: default;
-}
-.contact-text-field {
-  width: 100%;
-  height: 70px;
-  padding-left: 20px;
-  border: 1px none #000;
-  background-color: rgba(107, 112, 141, 0.1);
-}
+
 .w-input {
   display: block;
   width: 100%;
@@ -244,21 +256,16 @@ label {
   border: 1px solid #cccccc;
 }
 
-button,
-input,
-optgroup,
-select,
-textarea {
-  color: inherit;
-  font: inherit;
-  margin: 0;
+.contact-text-field {
+  width: 100%;
+  height: 70px;
+  padding-left: 20px;
+  border: 1px none #000;
+  background-color: rgba(107, 112, 141, 0.1);
 }
-input {
-  line-height: normal;
-}
-form {
-  display: block;
-  margin-top: 0em;
+
+.contact-text-field.textarea {
+  height: 200px;
 }
 
 /*footer*/
@@ -304,6 +311,7 @@ form {
 .footer-link {
   font-size: 17px;
   text-decoration: none;
+  color: #0000ee;
 }
 .w-form-done {
   padding: 20px;
@@ -331,9 +339,8 @@ form {
     transform: translateY(-8px) rotate(-45deg);
   }
   .nav-menu {
-    position: fixed;
-    left: -100%;
-    top: 140px;
+    position: absolute;
+    top: -100%;
     gap: 0;
     flex-direction: column;
     background-color: #c8c8c8;
@@ -346,7 +353,7 @@ form {
     font-weight: bold;
   }
   .nav-menu.active {
-    left: 0;
+    top: 70px;
     padding: 20px;
     font-size: 17px;
     align-items: flex-start;
@@ -408,6 +415,14 @@ form {
 }
 
 @media (max-width: 991px) {
+  /*NAVBAR*/
+
+  .container.navbar {
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-top: 0px;
+  }
+
   /*FORM*/
 
   .container.contact-container {
